--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -10,6 +10,7 @@
     <script src="../../backbone.js"></script>
     <script src="../backbone-localstorage.js"></script>
     <script src="todos.js"></script>
+    <script src="todos-ax.js"></script>
   </head>
 
   <body>
@@ -41,7 +42,6 @@
 
     <ul id="instructions">
       <li>Double-click to edit a todo.</li>
-      <li><a href="../../docs/todos.html">View the annotated source.</a></li>
     </ul>
 
     <div id="credits">
