--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -55,7 +55,7 @@
     <script type="text/template" id="item-template">
       <div class="todo <%= done ? 'done' : '' %>">
         <div class="display">
-          <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
+          <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> aria-label="completed if checked" />
           <div class="todo-text"></div>
           <span class="todo-destroy"></span>
         </div>
