stats live region

--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -34,7 +34,7 @@
           <ul id="todo-list"></ul>
         </div>
 
-        <div id="todo-stats"></div>
+        <div id="todo-stats" aria-atomic="true" aria-live="polite" aria-relevant="additions"></div>
 
       </div>
 
