--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <ul id="instructions">
-      <li>Double-click to edit a todo.</li>
+      <li>To edit a task, click or tap on it.</li>
     </ul>
 
     <div id="credits">
@@ -57,13 +57,13 @@
 
     <script type="text/template" id="item-template">
       <div class="todo <%= done ? 'done' : '' %>">
+        <div class="edit">
+          <input class="todo-input" type="text" value="" />
+        </div>
         <div class="display">
           <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> aria-label="completed if checked" />
           <div class="todo-text" tabindex="0"></div>
           <span class="todo-destroy" role="button" aria-label="destroy"></span>
-        </div>
-        <div class="edit">
-          <input class="todo-input" type="text" value="" />
         </div>
       </div>
     </script>
