--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -63,7 +63,7 @@
         <div class="display">
           <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> aria-label="completed if checked" />
           <div class="todo-text" tabindex="0"></div>
-          <span class="todo-destroy" role="button" aria-label="destroy"></span>
+          <span class="todo-destroy" tabindex="0" role="button" aria-label="destroy"></span>
         </div>
       </div>
     </script>
