--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -25,7 +25,7 @@
 
       <div class="content">
 
-        <div id="create-todo">
+        <div id="create-todo" aria-atomic="false" aria-live="polite" aria-relevant="additions">
           <input id="new-todo" placeholder="What needs to be done?" type="text" />
           <span class="ui-tooltip-top" style="display:none;">Press Enter to save this task</span>
         </div>
