set task list label in html rather than js

--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div id="todos">
-          <ul id="todo-list"></ul>
+          <ul id="todo-list" aria-label="tasks"></ul>
         </div>
 
         <div id="todo-stats">
