--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -61,7 +61,7 @@
           <input class="todo-input" type="text" value="" />
         </div>
         <div class="display">
-          <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> aria-label="completed if checked" />
+          <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> aria-label="completed?" />
           <div class="todo-text" tabindex="0"></div>
           <span class="todo-destroy" tabindex="0" role="button" aria-label="destroy"></span>
         </div>
