more semantically meaningful markup for text copy

--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -43,11 +43,9 @@
 
     </div>
 
-    <ul id="instructions">
-      <li>To edit a task, click or tap on it.</li>
-    </ul>
+    <p id="instructions">To edit a task, click or tap on it.<p>
 
-    <div id="credits">
+    <div id="credits" role="contentinfo">
       Created by
       <br />
       <a href="http://jgn.me/">J&eacute;r&ocirc;me Gravel-Niquet</a>
