mark app as busy while loading data

--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -17,7 +17,7 @@
 
     <!-- Todo App Interface -->
 
-    <div id="todoapp">
+    <div id="todoapp" aria-busy="true">
 
       <div class="title">
         <h1>Todos</h1>
