"x items left" stat describes task list

--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div id="todos">
-          <ul id="todo-list" aria-label="tasks"></ul>
+          <ul id="todo-list" aria-label="tasks" aria-describedby="todo-stats-count"></ul>
         </div>
 
         <div id="todo-stats">
