using aria-haspopover to hint about edit/destroy functionality

--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="display">
           <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> aria-label="completed?" />
-          <div class="todo-text" tabindex="0" role="button"></div>
+          <div class="todo-text" tabindex="0" role="button" aria-haspopup="true"></div>
           <span class="todo-destroy" tabindex="0" role="button" aria-label="destroy"></span>
         </div>
       </div>
