no tap, since iOS isn't yet supported

--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -43,7 +43,7 @@
 
     </div>
 
-    <p id="instructions">To edit a task, click or tap on it.<p>
+    <p id="instructions">Click to edit a todo.<p>
 
     <div id="credits" role="contentinfo">
       Created by
